--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Metadata dokumen -->
   <meta charset="utf-8" />
   <title>For You</title>
-  <meta name="description" content="Happy birthday" />
+  <meta name="description" content="Happy birthday Erika Sayang" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <!-- Favicon -->
   <link rel="icon" type="image" href="il.png" />
@@ -467,20 +467,20 @@ footer a {
         <!-- Konten teks -->
         <div id="scroll-container" class="blocktext">
           <p id="teks3" class="itim" style="font-size: 16px; margin-left: 40px">
-            <span class="pink">Hai</span> sayangkuuu cintakuuuuuu
-            duniakuuu semestakuuuuuu, <br><br /><b class="putih merah"><i>happy birthday yaaa 💐</i></b><br />semogaa
-            dengan bertambahnya usiamuuu bisaa menjadiii
-            pribadi yang lebih baikk, panjangg umurr, sehat selaluu, berbakti
-            kepada orang tuaaa, serta segala doa dan cita citamuuu dikabulkann
+            <span class="pink">Hai</span> sayangku yang paling 
+            nyebelin <br><br /><b class="putih merah"><i>happy birthday Erika sayang 💐</i></b><br />semogaa
+            dengan bertambahnya usia, kamu bisa menjadi
+            pribadi yang lebih baikk, semoga panjangg umurr, sehat selaluu,
+            banyak rejeki, semoga doa dan cita citamuuu dikabulkann
             dan segala urusan dipermudahkannn, <i>aminnn</i>.<br /><br />udaa
-            semakin dewasaaa sajaa yaa kamu inii 😋 jangan pernah takut gagal
-            yaaa, aku disiniii bakalan ngedukung kamuuuu selalu, jadiilahh
-            anak yang baik ya sayangg, jangann lupa bersyukurrr,<br /><br />maaf
+            semakin dewasa, masih cengeng ga ya? 😋 jangan pernah takut gagal
+            ya, aku disini bakalan ngedukung kamuuuu selalu,
+            tetep jadi pribadi yang bijaksana , jangann lupa bersyukurrr 🫶,<br /><br />maaf
             ya kalo aku blum bisa jadi apa yang kamu mauuu, dan maaf bgt kalo
-            selama ini aku sering buat masalah, maaf ya 🫠 aku selalu berdoaa
+            selama ini aku sering buat kamu nangis, maafin aku ya 😆 aku selalu berdoaa
             agar kamu tetap berada dalam lindungan-Nya, intinyaa ttep mnjdi
             pribadii yang lebih baikk.<br /><br />sekalilagii happy birthday
-            sayangkuuu cintakuuuuu,
+            Erika Hadinata 
             <i>remain a good person whenever and wherever</i> 🥳💐🫶✨
           </p>
         </div>
